# corevist_demo_project

./: README.md  config.py  pyproject.toml
corevist_demo_project/: application.py
corevist_demo_project/components/: header_menu.py  live_chat.py  watch_demo_modal_form.py
corevist_demo_project/pages/: about_page.py  book_a_demo_page.py  main_page.py  request_a_demo_page.py
tests/: conftest.py  test_book_a_demo.py  test_header_menu.py  test_live_chat.py  test_request_a_demo.py  test_scroll_button.py  test_watch_demo_modal_form.py
